--- a/questions game3.html
+++ b/questions game3.html
@@ -95,6 +95,8 @@
 	  </head>
 <body>
 	
+	<div style="overflow-x: hidden; width: 100%;">
+	
 	<h1>choose the correct answer</h1>
 	
 	
@@ -409,7 +411,7 @@
 	</div>
 	
 	
-	
+	</div>
 
 	
 	<script>
