--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	  
 	  
 	<title>answer the questions</title>  
-	  meta charset="UTF-8">
+	  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1"> 
 	  <style>
 	
