--- a/questions game3.html
+++ b/questions game3.html
@@ -7,7 +7,7 @@
 	  
 	<title>answer the questions</title>  
 	 <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1"> 
+  <meta name="viewport" content="width=device-width, initial-scale=0.8"> 
 	  <style>
 	
 		  body{
